# SmartOCD

./: .cproject  .gitignore  .gitmodules  .gn  .project  BUILD.gn  LICENSE  Makefile  README.md  TODOS  armv8.socd  cmsis_dap.socd  common.mk  config.mk  leak_test.sh  utils.mk
backup/: DAP.c  DAP.h  dap_jtag.c
backup/debugger/: cmsis-dap.c  debugger.mk  usb.h
backup/layer/: DAP.c  adapter.c  cmsis-dap.c  layer.mk
lua-5.3.4/: lua.mk
lua-5.3.4/src/: lua  luac
scripts/: test_luv.lua
src/: Makefile  main.c  p.h  smart_ocd.c  smart_ocd.h  smartocd.c  smartocd.h  source.mk
src/Component/: BUILD.gn  Makefile  component.c  component.h
src/Component/ADI/: ADIv5.c  ADIv5.h  ADIv5_api.c  ADIv5_private.h  ADIv6.h  ADIv6_private.h
src/Component/ADI/api/: ADIv5.c
src/Component/ADI/include/: ADIv5.h
src/Component/ARM/: ARMv7.h  ARMv8.h  Cortex.h
src/Component/RISC-V/: dm.c  dm.h  riscv_api.c
src/Component/adapter/: adapter_api.c  adapter_api.h  adapter_api_dap.c  adapter_api_jtag.c  cmsis-dap_api.c  ftdi_api.c
src/Component/lua_api/: api.c  api.h  api.mk
src/Component/lua_api/ADI/: ADIv5.c
src/Component/lua_api/adapter/: adapter.c  cmsis-dap.c
src/USB/: usb.c  (+1 more)
test/: JTAG_test  JTAG_test.c  Makefile  adapter_test  adapter_test.c  cmsis_test  cmsis_test.c  dap_queue_test  dap_queue_test.c  dap_test  dap_test.c  entry.c  ftdi_test.c  list_test  list_test.c  lua_test  lua_test.c  misc.c  printf_test  printf_test.c  riscv_test.c  romtable_test  romtable_test.c  tap_test  tap_test.c  target_test  target_test.c  test.mk  trasnport_test.c  usb_test  usb_test.c
(+93 files in other folders)
