executable("smartocd") {
  deps = [
    "//src/Adapter",
    "//src/Library",
    "//src/Component",
  ]

  sources = [
    "src/smartocd.c",
  ]

  include_dirs = [
    "//src",
    "//src/Library/libuv/include",
    "//src/Library/lua/src",
  ]

  libs = [
    "usb",
    "m",
    "dl",
    "ftdi1",
  ]

  defines = [
     "VERSION=\"1.0.0\"",
  ]
}
